--- a/App.xaml
+++ b/App.xaml
@@ -1,8 +1,5 @@
 ﻿<Application
     x:Class="Selectel.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Selectel"
-    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls">
-
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 </Application>
