Balance and transactions history

--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,9 +1,8 @@
 ﻿<Page
     x:Class="Selectel.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Selectel"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -13,7 +12,10 @@
             <NavigationViewItem Icon="MapDrive" x:Name="MenuItemServers"></NavigationViewItem>
         </NavigationView.MenuItems>
         <NavigationView.PaneFooter>
-            <NavigationViewItem Icon="Clear" x:Name="Logout"></NavigationViewItem>
+            <StackPanel>
+                <NavigationViewItem Icon="Contact" x:Name="Balance"></NavigationViewItem>
+                <NavigationViewItem Icon="Clear" x:Name="Logout"></NavigationViewItem>
+            </StackPanel>
         </NavigationView.PaneFooter>
         <Frame x:Name="ContentFrame" x:FieldModifier="public" />
     </NavigationView>
